--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ body {
   font-size: 20px;
   font-weight: 700;
   padding: 15px 35px;
-  
 }
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0px 200px;
 }
 .nav-title {
   color: #181818;
@@ -35,4 +35,17 @@ nav li {
 nav a {
   text-decoration: none;
   color: #474747;
+}
+.header {
+  background: #fff8f3;
+}
+.banner {
+  padding: 30px 30px 30px 150px;
+  display: flex;
+  align-items: center;
+}
+.banner .profile-pic {
+  width: 700px;
+
+ 
 }
