--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ nav a {
   background-image: url('./images/header_bg.png');
   background-repeat: no-repeat;
   background-position: bottom right;
+display: flex;
 
 
 }
