--- a/style.css
+++ b/style.css
@@ -41,16 +41,34 @@ nav a {
   background-image: url('./images/header_bg.png');
   background-repeat: no-repeat;
   background-position: bottom right;
-
-
 }
 .banner {
   padding: 30px 30px 0px 150px;
   display: flex;
-  align-items: center;
-}
-.banner .profile-pic {
-  width: 700px;
-
+  /* align-items: center; */
+  justify-content: space-between;
  
+}
+.profile-pic {
+  width: 900px;
+   
+}
+.banner-greeting{
+  font-size: 45px;
+  color: #474747;
+  margin-bottom: 0;
+}
+.banner-title{
+  font-size: 65px;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+.banner-con{
+  max-width: 500px;
+}
+.about{
+  padding: 130px;
+  border-radius: 10px;
+  background: #fff8f3;
 }
