--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   font-weight: 700;
   padding: 15px 35px;
 }
+
 nav {
   display: flex;
   align-items: center;
@@ -46,11 +47,12 @@ nav a {
   padding: 30px 30px 0px 150px;
   display: flex;
   /* align-items: center; */
-  justify-content: space-between;
+  justify-content: flex-end;
  
 }
 .profile-pic {
   width: 900px;
+  justify-content: space-between;
    
 }
 .banner-greeting{
@@ -68,7 +70,19 @@ nav a {
   max-width: 500px;
 }
 .about{
-  padding: 130px;
+  padding: 130px ;
   border-radius: 10px;
   background: #fff8f3;
+  margin: 130px 0;
+}
+.section-title{
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-description{
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
 }
