--- a/style.css
+++ b/style.css
@@ -96,6 +96,9 @@ main{
   max-width: 1140px;
   margin: 0 auto;
 }
+main section{
+  margin-top: 130px;
+}
 .about-info-con{
   display: flex;
   justify-content: space-around;
@@ -109,4 +112,22 @@ main{
 
 .skills-con{
   display: flex;
+  gap: 24px;
+}
+.skill{
+  padding: 30px;
+  border-radius: 5px;
+  background: #FFF;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+}
+.skill-description{
+  color: #757575;
+}
+
+.resume-columm-title {
+  color:  #474747;
+  font-size: 30px;
+  font-weight: 700;
+
 }
