--- a/style.css
+++ b/style.css
@@ -42,12 +42,11 @@ nav a {
   background-image: url('./images/header_bg.png');
   background-repeat: no-repeat;
   background-position: bottom right;
-<<<<<<< HEAD
-=======
-display: flex;
+
+justify-content: space-between;
+margin-right: -20px;
 
 
->>>>>>> 438144acba12c38e4be9ddc021f05515d57d3bb5
 }
 .banner {
   padding: 30px 30px 0px 150px;
@@ -59,6 +58,7 @@ display: flex;
 .profile-pic {
   width: 900px;
   justify-content: space-between;
+  margin-right: -200px;
    
 }
 .banner-greeting{
