--- a/style.css
+++ b/style.css
@@ -39,24 +39,25 @@ nav a {
 }
 .header {
   background: #fff8f3;
-  background-image: url('./images/header_bg.png');
+  background-image: url('./images/header_bg.png'), url('./images/developer.png');
   background-repeat: no-repeat;
-  background-position: bottom right;
+  background-position: bottom right, top left;
 
 justify-content: space-between;
-margin-right: -20px;
+margin-right: 20px;
+height: 750px;
 
 
 }
 .banner {
-  padding: 30px 30px 0px 150px;
+  padding: 30px 30px 0px 200px;
   display: flex;
   /* align-items: center; */
   justify-content: space-between;
  
 }
 .profile-pic {
-  width: 900px;
+  width: 1010px;
   justify-content: space-between;
   margin-right: -200px;
    
